update empty state

--- a/template.html
+++ b/template.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>tomochain-token-management</title>
+    <title>TRC-20 Tokens</title>
   </head>
   <body>
     <div id="app"></div>
